--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 extend: {
                     colors: {
                         clifford: '#da373d',
+                        'primary-bg': '#F85559',
                     }
                 }
             }
@@ -40,9 +41,92 @@
     </style>
 </head>
 
-<body>
+<body class="font-lato">
     <header>
+        <!-- nav section -->
+        <nav>
+            <!-- nav container -->
+            <div class="max-w-screen-xl mx-auto">
+                <!-- nav contant -->
+                <div class="navbar lg:bg-primary-bg my-12 lg:py-12 lg:px-16 lg:rounded-full">
 
+                    <!-- navbar start -->
+                    <div class="navbar-start">
+                        <!-- horizontal manu for desktop view -->
+                        <div class="hidden lg:flex">
+                            <ul class="menu menu-horizontal px-1 text-lg font-medium text-white">
+                                <li><a>Home</a></li>
+                                <li><a>About Us</a></li>
+                                <li><a>Shop</a></li>
+                                <li><a>All Fruits</a></li>
+                            </ul>
+                        </div>
+                    </div>
+
+                    <!-- navbar center -->
+                    <div class="navbar-center">
+                        <div class="pr-48 md:pr-0 lg:pr-0">
+                            <a class="flex items-center gap-4"><img class="w-8 lg:w-fit" src="./images/logo.png" alt="">
+                                <p class="text-xl lg:text-[40px] font-bold lg:text-white">Fruit Burst</p>
+                            </a>
+                        </div>
+                    </div>
+
+                    <!-- navbar end -->
+                    <div class="navbar-end">
+
+                        <div class="form-control hidden lg:flex">
+                            <div class="flex items-center">
+                                <input type="text" placeholder="Search here"
+                                    class="outline-none py-5 pl-7 pr-24 rounded-l-full" />
+                                <button class="outline-none py-5 pr-5 rounded-r-full bg-white">
+                                    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none"
+                                        viewBox="0 0 24 24" stroke="currentColor">
+                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                            d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
+                                    </svg>
+                                </button>
+                            </div>
+                        </div>
+
+                        <!-- dropdown manu for mobile & tablet view -->
+                        <div class="dropdown dropdown-end">
+                            <label tabindex="0" class="btn btn-ghost lg:hidden">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
+                                    stroke="currentColor">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                        d="M4 6h16M4 12h8m-8 6h16" />
+                                </svg>
+                            </label>
+                            <ul tabindex="0"
+                                class="dropdown-content z-[1] menu p-2 shadow bg-base-100 rounded-box w-72  text-sm font-light">
+                                <li><a>Home</a></li>
+                                <li><a>About Us</a></li>
+                                <li><a>Shop</a></li>
+                                <li><a>All Fruits</a></li>
+                                <li>
+                                    <div class="form-control">
+                                        <div class="flex items-center">
+                                            <input type="text" placeholder="Search here"
+                                                class="outline-none py-3 pl-1 pr-7 rounded-l-full font-light text-sm" />
+                                            <button class="outline-none py-3 pr-2 rounded-r-full bg-white">
+                                                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none"
+                                                    viewBox="0 0 24 24" stroke="currentColor">
+                                                    <path stroke-linecap="round" stroke-linejoin="round"
+                                                        stroke-width="2"
+                                                        d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
+                                                </svg>
+                                            </button>
+                                        </div>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </nav>
     </header>
     <main>
 
