--- a/index.html
+++ b/index.html
@@ -610,6 +610,79 @@
             </div>
         </section>
 
+        <!-- team section -->
+        <section>
+            <!-- team section container -->
+            <div class="max-w-screen-xl mx-auto pb-40">
+                <div>
+                    <!-- team section hero -->
+                    <div class="hero min-h-screen rounded-lg" style="background-image: url(./images/team.png);">
+                        <div class="hero-overlay bg-opacity-75 rounded-lg"></div>
+                        <div class="hero-content text-center text-neutral-content">
+                            <div class="">
+                                <h1 class="mb-5 text-5xl font-black text-white">Meet the team section</h1>
+                                <p class="mb-5 text-white">Contrary to popular belief, is not simply random text. It has
+                                    roots in a piece of classical <br>
+                                    Latin literature from 45 BC, making it over 2000 years old.</p>
+                                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-24 py-16 p-10">
+
+                                    <!-- menbar one -->
+                                    <div class="flex flex-col justify-center items-center">
+                                        <img class="pb-6" src="./images/member1.png" alt="">
+                                        <h6 class=" text-2xl font-bold text-white pb-1">Awlad Hossain</h6>
+                                        <p class="text-white pb-2">Fruits Expert</p>
+                                        <div class="text-primary-bg text-2xl gap-5">
+                                            <a href=""><i class="fa-brands fa-square-facebook"></i></a>
+                                            <a href=""><i class="fa-brands fa-square-twitter"></i></a>
+                                            <a href=""><i class="fa-brands fa-linkedin"></i></a>
+                                        </div>
+                                    </div>
+
+                                    <!-- menbar two -->
+                                    <div class="flex flex-col justify-center items-center">
+                                        <img class="pb-6" src="./images/member2.png" alt="">
+                                        <h6 class=" text-2xl font-bold text-white  pb-1">Safia Chowdhury</h6>
+                                        <p class="text-white pb-2">Fruits Expert</p>
+                                        <div class="text-primary-bg text-2xl gap-5">
+                                            <a href=""><i class="fa-brands fa-square-facebook"></i></a>
+                                            <a href=""><i class="fa-brands fa-square-twitter"></i></a>
+                                            <a href=""><i class="fa-brands fa-linkedin"></i></a>
+                                        </div>
+                                    </div>
+
+                                    <!-- menbar three -->
+                                    <div class="flex flex-col justify-center items-center">
+                                        <img class="pb-6" src="./images/member3.png" alt="">
+                                        <h6 class=" text-2xl font-bold text-white pb-1">Rokib Hossain</h6>
+                                        <p class="text-white pb-2">Fruits Expert</p>
+                                        <div class="text-primary-bg text-2xl gap-5">
+                                            <a href=""><i class="fa-brands fa-square-facebook"></i></a>
+                                            <a href=""><i class="fa-brands fa-square-twitter"></i></a>
+                                            <a href=""><i class="fa-brands fa-linkedin"></i></a>
+                                        </div>
+                                    </div>
+
+                                    <!-- menbar four -->
+                                    <div class="flex flex-col justify-center items-center">
+                                        <img class="pb-6" src="./images/member4.png" alt="">
+                                        <h6 class=" text-2xl font-bold text-white pb-1">Chaity</h6>
+                                        <p class="text-white pb-2">Fruits Expert</p>
+                                        <div class="text-primary-bg text-2xl gap-5">
+                                            <a href=""><i class="fa-brands fa-square-facebook"></i></a>
+                                            <a href=""><i class="fa-brands fa-square-twitter"></i></a>
+                                            <a href=""><i class="fa-brands fa-linkedin"></i></a>
+                                        </div>
+                                    </div>
+
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </main>
     <footer>
 
