added footer section

--- a/index.html
+++ b/index.html
@@ -684,8 +684,38 @@
         </section>
 
     </main>
-    <footer>
 
+    <!-- footer section -->
+    <footer>
+        <!-- footer container -->
+        <div class="bg-[#121212]">
+            <!-- footer contant -->
+
+            <div class="max-w-screen-xl mx-auto footer footer-center p-10 lg:py-24 text-base-content rounded">
+                <div class="flex justify-around items-center">
+                    <img class="w-10" src="./images/logo.png" alt="">
+                    <h2 class="text-white text-3xl font-bold">Frute Brust</h2>
+                </div>
+                <div class="flex flex-wrap justify-center items-center px-0 gap-10 text-sm text-white">
+                    <a class="link link-hover">Home</a>
+                    <a class="link link-hover">About Us</a>
+                    <a class="link link-hover">Shop</a>
+                    <a class="link link-hover">All Fruits</a>
+                    <a class="link link-hover">Support</a>
+                    <a class="link link-hover">My Account</a>
+                </div>
+                <div>
+                    <div class="grid grid-flow-col gap-4 text-3xl gap-6 text-white">
+                        <a><i class="fa-brands fa-twitter"></i></a>
+                        <a><i class="fa-brands fa-facebook"></i></a>
+                        <a><i class="fa-brands fa-youtube"></i></a>
+                        <a><i class="fa-brands fa-linkedin-in"></i></a>
+                        <a><i class="fa-brands fa-instagram"></i></a>
+                        <a><i class="fa-brands fa-apple"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </footer>
 </body>
 
