added banner section

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <!-- nav container -->
             <div class="max-w-screen-xl mx-auto">
                 <!-- nav content -->
-                <div class="navbar lg:bg-primary-bg my-12 lg:py-12 lg:px-16 lg:rounded-full">
+                <div class="navbar lg:bg-primary-bg my-5 lg:my-12 lg:py-12 lg:px-16 lg:rounded-full">
 
                     <!-- navbar start -->
                     <div class="navbar-start">
@@ -140,16 +140,172 @@
             </div>
         </nav>
 
+        <!-- banner section -->
+        <section>
+            <!-- banner container -->
+            <div class="max-w-screen-xl mx-auto mb-6 lg:mb-40">
+                <!-- banner carousel -->
+                <div class="relative">
+                    <div class="carousel w-full">
+                        <!-- slide one -->
+                        <div id="slide1" class="carousel-item relative w-full">
+                            <div class="hero min-h-screen rounded-xl"
+                                style="background-image: url(./images/banner1.png);">
+                                <div class="hero-overlay bg-opacity-60 rounded-xl"></div>
+                                <div class="hero-content text-center text-neutral-content">
+                                    <div class="lg:pb-40">
+                                        <h1 class="mb-5 text-4xl lg:text-7xl font-black text-white">Exotic tastes at
+                                            your <br>
+                                            doorstep</h1>
+                                        <p class="mb-5 text-sm lg:text-xl font-normal text-white">We supply highly
+                                            quality organic
+                                            products</p>
+                                        <button
+                                            class="btn border-primary-bg bg-primary-bg text-white hover:border-primary-bg hover:bg-primary-bg hover:text-white text-base lg:text-xl font-black">Shop
+                                            Now</button>
+                                    </div>
+                                </div>
+                            </div>
+                            <div
+                                class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                                <a href="#slide4" class="btn btn-circle">❮</a>
+                                <a href="#slide2" class="btn btn-circle">❯</a>
+                            </div>
+                        </div>
+
+                        <!-- slide two -->
+                        <div id="slide2" class="carousel-item relative w-full">
+                            <div class="hero min-h-screen rounded-xl"
+                                style="background-image: url(./images/banner2.png);">
+                                <div class="hero-overlay bg-opacity-60 rounded-xl"></div>
+                                <div class="hero-content text-center text-neutral-content">
+                                    <div class="lg:pb-40">
+                                        <h1 class="mb-5 text-4xl lg:text-7xl font-black text-white">Exotic tastes at
+                                            your <br>
+                                            doorstep</h1>
+                                        <p class="mb-5 text-sm lg:text-xl font-normal text-white">We supply highly
+                                            quality organic
+                                            products</p>
+                                        <button
+                                            class="btn border-primary-bg bg-primary-bg text-white hover:border-primary-bg hover:bg-primary-bg hover:text-white text-base lg:text-xl font-black">Shop
+                                            Now</button>
+                                    </div>
+                                </div>
+                            </div>
+                            <div
+                                class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                                <a href="#slide1" class="btn btn-circle">❮</a>
+                                <a href="#slide3" class="btn btn-circle">❯</a>
+                            </div>
+                        </div>
+
+                        <!-- slide three -->
+                        <div id="slide3" class="carousel-item relative w-full">
+                            <div class="hero min-h-screen rounded-xl"
+                                style="background-image: url(./images/banner3.png);">
+                                <div class="hero-overlay bg-opacity-60 rounded-xl"></div>
+                                <div class="hero-content text-center text-neutral-content">
+                                    <div class="lg:pb-40">
+                                        <h1 class="mb-5 text-4xl lg:text-7xl font-black text-white">Exotic tastes at
+                                            your <br>
+                                            doorstep</h1>
+                                        <p class="mb-5 text-sm lg:text-xl font-normal text-white">We supply highly
+                                            quality organic
+                                            products</p>
+                                        <button
+                                            class="btn border-primary-bg bg-primary-bg text-white hover:border-primary-bg hover:bg-primary-bg hover:text-white text-base lg:text-xl font-black">Shop
+                                            Now</button>
+                                    </div>
+                                </div>
+                            </div>
+                            <div
+                                class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                                <a href="#slide2" class="btn btn-circle">❮</a>
+                                <a href="#slide4" class="btn btn-circle">❯</a>
+                            </div>
+                        </div>
+
+                        <!-- slide four -->
+                        <div id="slide4" class="carousel-item relative w-full">
+                            <div class="hero min-h-screen rounded-xl"
+                                style="background-image: url(./images/banner4.png);">
+                                <div class="hero-overlay bg-opacity-60 rounded-xl"></div>
+                                <div class="hero-content text-center text-neutral-content">
+                                    <div class="lg:pb-40">
+                                        <h1 class="mb-5 text-4xl lg:text-7xl font-black text-white">Exotic tastes at
+                                            your <br>
+                                            doorstep</h1>
+                                        <p class="mb-5 text-sm lg:text-xl font-normal text-white">We supply highly
+                                            quality organic
+                                            products</p>
+                                        <button
+                                            class="btn border-primary-bg bg-primary-bg text-white hover:border-primary-bg hover:bg-primary-bg hover:text-white text-base lg:text-xl font-black">Shop
+                                            Now</button>
+                                    </div>
+                                </div>
+                            </div>
+                            <div
+                                class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                                <a href="#slide3" class="btn btn-circle">❮</a>
+                                <a href="#slide1" class="btn btn-circle">❯</a>
+                            </div>
+                        </div>
+
+                    </div>
+                    <!-- banner 2nd part only for lg sereen -->
+                    <div class="absolute left-24 top-[525px] hidden lg:flex">
+                        <div class="w-[1100px] mx-auto bg-white rounded-xl">
+                            <!-- container -->
+                            <div class="flex justify-evenly items-center py-8 px-13 gap-10">
+
+                                <!-- one -->
+                                <div class="flex flex-col items-center">
+                                    <img src="./images/fruit1.png" alt="">
+                                    <h6 class="text-xl">Strawberry</h6>
+                                </div>
+
+                                <!-- two -->
+                                <div class="flex flex-col items-center">
+                                    <img src="./images/fruit2.png" alt="">
+                                    <h6 class="text-xl">Orange</h6>
+                                </div>
+
+                                <!-- three -->
+                                <div class="flex flex-col items-center">
+                                    <img src="./images/fruit3.png" alt="">
+                                    <h6 class="text-xl">Mango</h6>
+                                </div>
+
+                                <!-- four -->
+                                <div class="flex flex-col items-center">
+                                    <img src="./images/fruit4.png" alt="">
+                                    <h6 class="text-xl">Strawberry</h6>
+                                </div>
+
+                                <!-- five -->
+                                <div class="flex flex-col items-center">
+                                    <img src="./images/fruit5.png" alt="">
+                                    <h6 class="text-xl">Mango</h6>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+
     </header>
     <main>
         <!-- Deal of the day secction -->
         <section>
             <!-- Deal of the day container -->
-            <div class="max-w-screen-xl mx-auto pb-40">
+            <div class="max-w-screen-xl mx-auto mb-6 lg:mb-24">
 
                 <!-- Deal of the day countdown -->
                 <div
-                    class="flex flex-col md:flex-col-reverse lg:flex-row justify-between items-center text-center lg:text-left">
+                    class="flex flex-col md:flex-col-reverse lg:flex-row justify-between items-center pb-5 lg:pb-16 text-center lg:text-left">
 
                     <div class="space-y-2 lg:space-y-6 pb-5 lg:pb-0">
                         <h1 class="font-black text-xl lg:text-5xl text-[#121212]">Deal of the day</h1>
@@ -198,11 +354,11 @@
                 </div>
 
                 <!-- Deal of the day card container -->
-                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 pb-6">
+                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-5 pb-10 space-y-4 md:space-y-0">
 
                     <!-- Deal of the day card one -->
                     <div>
-                        <div class="card my-12 bg-transparent border-2">
+                        <div class="card bg-transparent border-2">
                             <figure class="px-10 pt-10">
                                 <img src="./images/fruit6.png" alt="Shoes" class="rounded-xl" />
                             </figure>
@@ -284,9 +440,9 @@
                                                         <div class="modal-action">
                                                             <!-- if there is a button in form, it will close the modal -->
                                                             <button
-                                                                class="btn text-xl font-black bg-white border-2 border-primary-bg text-primary-bg hover:bg-primary-bg hover:text-white hover:border-primary-bg">Close</button>
+                                                                class="btn text-base font-black bg-white border-2 border-primary-bg text-primary-bg hover:bg-primary-bg hover:text-white hover:border-primary-bg">Close</button>
                                                             <button
-                                                                class="btn text-xl font-black bg-white border-2 border-primary-bg text-primary-bg hover:bg-primary-bg hover:text-white hover:border-primary-bg">Buy
+                                                                class="btn text-base font-black bg-white border-2 border-primary-bg text-primary-bg hover:bg-primary-bg hover:text-white hover:border-primary-bg">Buy
                                                                 Now</button>
                                                         </div>
                                                     </div>
@@ -302,7 +458,7 @@
 
                     <!-- Deal of the day card two -->
                     <div>
-                        <div class="card my-12 bg-transparent border-2">
+                        <div class="card bg-transparent border-2">
                             <figure class="px-10 pt-10">
                                 <img src="./images/fruit7.png" alt="Shoes" class="rounded-xl" />
                             </figure>
@@ -384,9 +540,9 @@
                                                         <div class="modal-action">
                                                             <!-- if there is a button in form, it will close the modal -->
                                                             <button
-                                                                class="btn text-xl font-black bg-white border-2 border-primary-bg text-primary-bg hover:bg-primary-bg hover:text-white hover:border-primary-bg">Close</button>
+                                                                class="btn text-base font-black bg-white border-2 border-primary-bg text-primary-bg hover:bg-primary-bg hover:text-white hover:border-primary-bg">Close</button>
                                                             <button
-                                                                class="btn text-xl font-black bg-white border-2 border-primary-bg text-primary-bg hover:bg-primary-bg hover:text-white hover:border-primary-bg">Buy
+                                                                class="btn text-base font-black bg-white border-2 border-primary-bg text-primary-bg hover:bg-primary-bg hover:text-white hover:border-primary-bg">Buy
                                                                 Now</button>
                                                         </div>
                                                     </div>
@@ -402,7 +558,7 @@
 
                     <!-- Deal of the day card three -->
                     <div>
-                        <div class="card my-12 bg-transparent border-2">
+                        <div class="card bg-transparent border-2">
                             <figure class="px-10 pt-10">
                                 <img src="./images/fruit8.png" alt="Shoes" class="rounded-xl" />
                             </figure>
@@ -484,9 +640,9 @@
                                                         <div class="modal-action">
                                                             <!-- if there is a button in form, it will close the modal -->
                                                             <button
-                                                                class="btn text-xl font-black bg-white border-2 border-primary-bg text-primary-bg hover:bg-primary-bg hover:text-white hover:border-primary-bg">Close</button>
+                                                                class="btn text-base font-black bg-white border-2 border-primary-bg text-primary-bg hover:bg-primary-bg hover:text-white hover:border-primary-bg">Close</button>
                                                             <button
-                                                                class="btn text-xl font-black bg-white border-2 border-primary-bg text-primary-bg hover:bg-primary-bg hover:text-white hover:border-primary-bg">Buy
+                                                                class="btn text-base font-black bg-white border-2 border-primary-bg text-primary-bg hover:bg-primary-bg hover:text-white hover:border-primary-bg">Buy
                                                                 Now</button>
                                                         </div>
                                                     </div>
@@ -502,7 +658,7 @@
 
                     <!-- Deal of the day card four -->
                     <div>
-                        <div class="card my-12 bg-transparent border-2">
+                        <div class="card bg-transparent border-2">
                             <figure class="px-10 pt-10">
                                 <img src="./images/fruit9.png" alt="Shoes" class="rounded-xl" />
                             </figure>
@@ -584,9 +740,9 @@
                                                         <div class="modal-action">
                                                             <!-- if there is a button in form, it will close the modal -->
                                                             <button
-                                                                class="btn text-xl font-black bg-white border-2 border-primary-bg text-primary-bg hover:bg-primary-bg hover:text-white hover:border-primary-bg">Close</button>
+                                                                class="btn text-base font-black bg-white border-2 border-primary-bg text-primary-bg hover:bg-primary-bg hover:text-white hover:border-primary-bg">Close</button>
                                                             <button
-                                                                class="btn text-xl font-black bg-white border-2 border-primary-bg text-primary-bg hover:bg-primary-bg hover:text-white hover:border-primary-bg">Buy
+                                                                class="btn text-base font-black bg-white border-2 border-primary-bg text-primary-bg hover:bg-primary-bg hover:text-white hover:border-primary-bg">Buy
                                                                 Now</button>
                                                         </div>
                                                     </div>
@@ -603,7 +759,7 @@
                 </div>
                 <div class="flex justify-center">
                     <button
-                        class="btn text-xl font-black bg-primary-bg  border-2 border-primary-bg text-white hover:bg-primary-bg hover:text-white hover:border-primary-bg">Shop
+                        class="btn text-base lg:text-lg font-black bg-primary-bg  border-2 border-primary-bg text-white hover:bg-primary-bg hover:text-white hover:border-primary-bg">Shop
                         All</button>
                 </div>
 
@@ -613,7 +769,7 @@
         <!-- team section -->
         <section>
             <!-- team section container -->
-            <div class="max-w-screen-xl mx-auto pb-40">
+            <div class="max-w-screen-xl mx-auto mb-6 lg:mb-24">
                 <div>
                     <!-- team section hero -->
                     <div class="hero min-h-screen rounded-lg" style="background-image: url(./images/team.png);">
