added why choose us section

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 
 <body class="font-lato">
     <header>
+
         <!-- nav section -->
         <nav>
             <!-- nav container -->
@@ -143,9 +144,9 @@
         <!-- banner section -->
         <section>
             <!-- banner container -->
-            <div class="max-w-screen-xl mx-auto mb-6 lg:mb-40">
+            <div class="max-w-screen-xl mx-auto mb-6 lg:mb-24">
                 <!-- banner carousel -->
-                <div class="relative">
+                <div>
                     <div class="carousel w-full">
                         <!-- slide one -->
                         <div id="slide1" class="carousel-item relative w-full">
@@ -253,7 +254,7 @@
 
                     </div>
                     <!-- banner 2nd part only for lg sereen -->
-                    <div class="absolute left-24 top-[525px] hidden lg:flex">
+                    <div class="relative -mt-32 hidden lg:flex">
                         <div class="w-[1100px] mx-auto bg-white rounded-xl">
                             <!-- container -->
                             <div class="flex justify-evenly items-center py-8 px-13 gap-10">
@@ -297,7 +298,9 @@
         </section>
 
     </header>
+
     <main>
+
         <!-- Deal of the day secction -->
         <section>
             <!-- Deal of the day container -->
@@ -775,7 +778,7 @@
                     <div class="hero min-h-screen rounded-lg" style="background-image: url(./images/team.png);">
                         <div class="hero-overlay bg-opacity-75 rounded-lg"></div>
                         <div class="hero-content text-center text-neutral-content">
-                            <div class="">
+                            <div>
                                 <h1 class="mb-5 text-5xl font-black text-white">Meet the team section</h1>
                                 <p class="mb-5 text-white">Contrary to popular belief, is not simply random text. It has
                                     roots in a piece of classical <br>
@@ -839,9 +842,123 @@
             </div>
         </section>
 
+        <!-- why choose us section -->
+        <section>
+
+            <!-- why choose us section container -->
+            <div class="max-w-screen-xl mx-auto mb-6 lg:mb-24">
+
+                <!-- why choose us heading -->
+                <div class="text-center space-y-2 lg:space-y-6 pb-8 lg:pb-10">
+                    <h2 class="font-black text-xl lg:text-5xl text-[#121212]">Why Choose Us</h2>
+                    <p class="text-sm lg:text-base font-normal text-[#12121299] px-14 lg:px-0">Contrary to popular
+                        belief, is not simply random text. It has roots in a piece of classical <br>
+                        Latin literature from 45 BC, making it over 2000 years old.</p>
+                </div>
+
+                <!-- why choose us section contant -->
+                <div class="grid grid-cols-1 lg:grid-cols-3 gap-7">
+
+                    <!-- why choose us section contant frist in small and medium screen -->
+                    <div class="flex justify-center lg:hidden">
+                        <img src="./images/whychoose1.png" alt="">
+                    </div>
+
+                    <!-- why choose us section contant left -->
+                    <div class="text-center lg:text-left space-y-6">
+
+                        <!-- items one -->
+                        <div class="flex flex-col lg:flex-row justify-center items-center gap-3">
+                            <div>
+                                <img src="./images/icons/icon-1.png" alt="">
+                            </div>
+                            <div class="space-y-4">
+                                <h6 class="text-xl font-black text-[#121212] border-b-2 pb-2">Dedicated Team</h6>
+                                <p class="text-[#12121299]">Professional employees are there for you to pick <br>
+                                    the most amazing and fresh fruits.</p>
+                            </div>
+                        </div>
+
+                        <!-- items two -->
+                        <div class="flex flex-col lg:flex-row justify-center items-center gap-3">
+                            <div>
+                                <img src="./images/icons/icon-2.png" alt="">
+                            </div>
+                            <div class="space-y-4">
+                                <h6 class="text-xl font-black text-[#121212] border-b-2 pb-2">Fresh is Best</h6>
+                                <p class="text-[#12121299]">Professional employees are there for you to pick <br>
+                                    the most amazing and fresh fruits.</p>
+                            </div>
+                        </div>
+
+                        <!-- items three -->
+                        <div class="flex flex-col lg:flex-row justify-center items-center gap-3">
+                            <div>
+                                <img src="./images/icons/icon-3.png" alt="">
+                            </div>
+                            <div class="space-y-4">
+                                <h6 class="text-xl font-black text-[#121212] border-b-2 pb-2">Gift Certificates</h6>
+                                <p class="text-[#12121299]">Professional employees are there for you to pick <br>
+                                    the most amazing and fresh fruits.</p>
+                            </div>
+                        </div>
+
+                    </div>
+
+                    <!-- why choose us section contant middle -->
+                    <div class="hidden lg:flex">
+                        <img src="./images/whychoose1.png" alt="">
+                    </div>
+
+                    <!-- why choose us section contant right -->
+                    <div class="text-center lg:text-right space-y-6">
+
+                        <!-- items four -->
+                        <div class="flex flex-col lg:flex-row-reverse justify-center items-center gap-3">
+                            <div>
+                                <img src="./images/icons/icon-4.png" alt="">
+                            </div>
+                            <div class="space-y-4">
+                                <h6 class="text-xl font-black text-[#121212] border-b-2 pb-2">Integrated Supplier</h6>
+                                <p class="text-[#12121299]">Professional employees are there for you to pick <br>
+                                    the most amazing and fresh fruits.</p>
+                            </div>
+                        </div>
+
+                        <!-- items five -->
+                        <div class="flex flex-col lg:flex-row-reverse justify-center items-center gap-3">
+                            <div>
+                                <img src="./images/icons/icon-5.png" alt="">
+                            </div>
+                            <div class="space-y-4">
+                                <h6 class="text-xl font-black text-[#121212] border-b-2 pb-2">Sustainable Practice</h6>
+                                <p class="text-[#12121299]">Professional employees are there for you to pick <br>
+                                    the most amazing and fresh fruits.</p>
+                            </div>
+                        </div>
+
+                        <!-- items six -->
+                        <div class="flex flex-col lg:flex-row-reverse justify-center items-center gap-3">
+                            <div>
+                                <img src="./images/icons/icon-6.png" alt="">
+                            </div>
+                            <div class="space-y-4">
+                                <h6 class="text-xl font-black text-[#121212] border-b-2 pb-2">The Benefits Only</h6>
+                                <p class="text-[#12121299]">Professional employees are there for you to pick <br>
+                                    the most amazing and fresh fruits.</p>
+                            </div>
+                        </div>
+
+                    </div>
+
+                </div>
+
+            </div>
+
+        </section>
+
     </main>
 
-    <!-- footer section -->
     <footer>
         <!-- footer container -->
         <div class="bg-[#121212]">
