--- a/index.html
+++ b/index.html
@@ -872,8 +872,9 @@
                             <div>
                                 <img src="./images/icons/icon-1.png" alt="">
                             </div>
-                            <div class="space-y-4">
-                                <h6 class="text-xl font-black text-[#121212] border-b-2 pb-2">Dedicated Team</h6>
+                            <div class="space-y-3">
+                                <h6 class="text-xl font-black text-[#121212]">Dedicated Team</h6>
+                                <hr class="w-24 mx-auto h-[2px] bg-black lg:mx-0">
                                 <p class="text-[#12121299]">Professional employees are there for you to pick <br>
                                     the most amazing and fresh fruits.</p>
                             </div>
@@ -884,8 +885,9 @@
                             <div>
                                 <img src="./images/icons/icon-2.png" alt="">
                             </div>
-                            <div class="space-y-4">
-                                <h6 class="text-xl font-black text-[#121212] border-b-2 pb-2">Fresh is Best</h6>
+                            <div class="space-y-3">
+                                <h6 class="text-xl font-black text-[#121212]">Fresh is Best</h6>
+                                <hr class="w-24 mx-auto h-[2px] bg-black lg:mx-0">
                                 <p class="text-[#12121299]">Professional employees are there for you to pick <br>
                                     the most amazing and fresh fruits.</p>
                             </div>
@@ -896,8 +898,9 @@
                             <div>
                                 <img src="./images/icons/icon-3.png" alt="">
                             </div>
-                            <div class="space-y-4">
-                                <h6 class="text-xl font-black text-[#121212] border-b-2 pb-2">Gift Certificates</h6>
+                            <div class="space-y-3">
+                                <h6 class="text-xl font-black text-[#121212]">Gift Certificates</h6>
+                                <hr class="w-24 mx-auto h-[2px] bg-black lg:mx-0">
                                 <p class="text-[#12121299]">Professional employees are there for you to pick <br>
                                     the most amazing and fresh fruits.</p>
                             </div>
@@ -918,8 +921,9 @@
                             <div>
                                 <img src="./images/icons/icon-4.png" alt="">
                             </div>
-                            <div class="space-y-4">
-                                <h6 class="text-xl font-black text-[#121212] border-b-2 pb-2">Integrated Supplier</h6>
+                            <div class="space-y-3">
+                                <h6 class="text-xl font-black text-[#121212]">Integrated Supplier</h6>
+                                <hr class="w-28 mx-auto h-[2px] bg-black lg:mr-0">
                                 <p class="text-[#12121299]">Professional employees are there for you to pick <br>
                                     the most amazing and fresh fruits.</p>
                             </div>
@@ -930,8 +934,9 @@
                             <div>
                                 <img src="./images/icons/icon-5.png" alt="">
                             </div>
-                            <div class="space-y-4">
-                                <h6 class="text-xl font-black text-[#121212] border-b-2 pb-2">Sustainable Practice</h6>
+                            <div class="space-y-3">
+                                <h6 class="text-xl font-black text-[#121212]">Sustainable Practice</h6>
+                                <hr class="w-28 mx-auto h-[2px] bg-black lg:mr-0">
                                 <p class="text-[#12121299]">Professional employees are there for you to pick <br>
                                     the most amazing and fresh fruits.</p>
                             </div>
@@ -942,8 +947,9 @@
                             <div>
                                 <img src="./images/icons/icon-6.png" alt="">
                             </div>
-                            <div class="space-y-4">
-                                <h6 class="text-xl font-black text-[#121212] border-b-2 pb-2">The Benefits Only</h6>
+                            <div class="space-y-3">
+                                <h6 class="text-xl font-black text-[#121212]">The Benefits Only</h6>
+                                <hr class="w-28 mx-auto h-[2px] bg-black lg:mr-0">
                                 <p class="text-[#12121299]">Professional employees are there for you to pick <br>
                                     the most amazing and fresh fruits.</p>
                             </div>
