--- a/index.html
+++ b/index.html
@@ -190,8 +190,10 @@
                             </div>
                             <div
                                 class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-                                <a href="#slide4" class="btn btn-circle">❮</a>
-                                <a href="#slide2" class="btn btn-circle">❯</a>
+                                <a href="#slide4"
+                                    class="btn btn-circle bg-black text-white border-none hover:bg-black">❮</a>
+                                <a href="#slide2"
+                                    class="btn btn-circle bg-black text-white border-none hover:bg-black">❯</a>
                             </div>
                         </div>
 
@@ -216,8 +218,10 @@
                             </div>
                             <div
                                 class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-                                <a href="#slide1" class="btn btn-circle">❮</a>
-                                <a href="#slide3" class="btn btn-circle">❯</a>
+                                <a href="#slide1"
+                                    class="btn btn-circle bg-black text-white border-none hover:bg-black">❮</a>
+                                <a href="#slide3"
+                                    class="btn btn-circle bg-black text-white border-none hover:bg-black">❯</a>
                             </div>
                         </div>
 
@@ -242,8 +246,10 @@
                             </div>
                             <div
                                 class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-                                <a href="#slide2" class="btn btn-circle">❮</a>
-                                <a href="#slide4" class="btn btn-circle">❯</a>
+                                <a href="#slide2"
+                                    class="btn btn-circle bg-black text-white border-none hover:bg-black">❮</a>
+                                <a href="#slide4"
+                                    class="btn btn-circle bg-black text-white border-none hover:bg-black">❯</a>
                             </div>
                         </div>
 
@@ -268,8 +274,10 @@
                             </div>
                             <div
                                 class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-                                <a href="#slide3" class="btn btn-circle">❮</a>
-                                <a href="#slide1" class="btn btn-circle">❯</a>
+                                <a href="#slide3"
+                                    class="btn btn-circle bg-black text-white border-none hover:bg-black">❮</a>
+                                <a href="#slide1"
+                                    class="btn btn-circle bg-black text-white border-none hover:bg-black">❯</a>
                             </div>
                         </div>
 
