footer section update

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
                             </label>
                             <ul tabindex="0"
-                                class="dropdown-content z-[1] menu p-2 shadow bg-base-100 rounded-box w-72  text-sm font-light">
+                                class="dropdown-content z-[1] menu p-2 bg-base-100 rounded-box w-64  text-sm font-light">
                                 <li><a>Home</a></li>
                                 <li><a>About Us</a></li>
                                 <li><a>Shop</a></li>
@@ -1013,7 +1013,7 @@
                     <a class="link link-hover">My Account</a>
                 </div>
                 <div>
-                    <div class="grid grid-flow-col gap-4 text-3xl gap-6 text-white">
+                    <div class="flex flex-wrap justify-center items-center gap-4 text-3xl gap-6 text-white">
                         <a><i class="fa-brands fa-twitter"></i></a>
                         <a><i class="fa-brands fa-facebook"></i></a>
                         <a><i class="fa-brands fa-youtube"></i></a>
